fix overlap content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2500,7 +2500,7 @@ figure.effect-zoe:hover p.icon-links a:first-child {
   }
 
   section.content {
-    margin-top: 150px;
+    margin-top: 200px;
   }
   header.sticky {
     padding: 10px 20px;
